# snd

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  toolchain-windows-cl.cmake
cmake/: snd-config.cmake.in
include/snd/: audio_sync.hpp  autocorrelation.hpp  const_math.hpp  convert.h  convert.hpp  diff_detector.h  diff_detector.hpp  dup_filter.h  dup_filter.hpp  ease.h  ease.hpp  flags.hpp  frame-pos.hpp  interpolation.h  misc.h  misc.hpp  mlext.h  ramp_gen.hpp  resampler.hpp  simplex_noise.hpp  threading.hpp  types.h
include/snd/audio/: autocorrelation.hpp  clipping.h  clipping.hpp  db_meter.h  dc_bias.hpp  delay.hpp  env_follower.hpp  feedback_delay.hpp  fudge.hpp  glottis.hpp  level_meter.h  level_meter.hpp  normalizer.hpp  oscillators.hpp  player.hpp  scale.hpp  wavebender.hpp
include/snd/audio/filter/: 1-pole.h  1-pole.hpp  1-pole_mono.h  1-pole_stereo.h  2-pole.h  2-pole.hpp  2-pole_allpass.cpp  2-pole_allpass.h  2-pole_allpass.hpp  2-pole_allpass_array.h  2-pole_allpass_array.hpp  2-pole_allpass_array_mono.h  2-pole_allpass_array_stereo.h  2-pole_allpass_mono.h  2-pole_allpass_stereo.h  2-pole_mono.h  2-pole_stereo.h  tract.hpp
include/snd/audio/filter/serial/: 2-pole.h  2-pole.hpp  2-pole_mono.h  2-pole_mono.hpp
include/snd/audio/ringmod/: ring_modulator.h  ring_modulator_mono.h  ring_modulator_stereo.h
include/snd/audio/saturator/: moron_saturator.h  moron_saturator.hpp  moron_saturator_mono.h  moron_saturator_stereo.h
include/snd/buffers/: deferred_buffer.hpp  harold_buffer.hpp  stanley_buffer.hpp  stanley_buffer_pool.hpp
include/snd/clock/: clock_divider.h  clock_divider.hpp
include/snd/control/: smoother.h  smoother.hpp
include/snd/curve/: curve.hpp  schlick.hpp  tilt.hpp
include/snd/samples/: sample_mipmap.hpp
include/snd/storage/: audio_file_format.h  audio_file_reader.h  audio_file_writer.h  circular_buffer.h  circular_buffer.hpp  frame_data.h  frame_data.hpp  interleaving.hpp
include/snd/threads/: atomic_trigger.hpp  audio_function.hpp  audio_object.h  audio_object.hpp  audio_object_manager.hpp  audio_sync.hpp  buffer_sync_object.hpp  buffer_sync_signal.hpp  garbage_disposal.h  garbage_disposal.hpp
include/snd/threads/msg/: audio_gui_comms.h  audio_gui_comms.hpp  msg_channel.h  msg_channel.hpp  msg_comms.h  msg_comms.hpp
include/snd/transport/: frame_position.h  frame_position.hpp
src/audio/filter/: 1-pole.cpp  1-pole_mono.cpp  1-pole_stereo.cpp  2-pole.cpp  2-pole_allpass.cpp  2-pole_allpass_mono.cpp  2-pole_allpass_stereo.cpp  2-pole_mono.cpp  2-pole_stereo.cpp
src/audio/filter/serial/: 2-pole.cpp  2-pole_mono.cpp
src/audio/ringmod/: ring_modulator.cpp  ring_modulator_mono.cpp  ring_modulator_stereo.cpp
src/audio/saturator/: moron_saturator.cpp  moron_saturator_mono.cpp  moron_saturator_stereo.cpp
src/clock/: clock_divider.cpp
src/control/: smoother.cpp
src/storage/: audio_file_reader.cpp  audio_file_writer.cpp
src/storage/dr_libs/: dr_libs_impl.cpp  dr_libs_utils.cpp  dr_libs_utils.h
src/storage/miniaudio/: snd_miniaudio.cpp  snd_miniaudio.h
src/storage/wavpack/: wavpack_file_reader.cpp  wavpack_file_reader.h  wavpack_memory_reader.cpp  wavpack_memory_reader.h  wavpack_reader.cpp  wavpack_reader.h
src/threads/msg/: audio_gui_comms.cpp  msg_channel.cpp
src/transport/: frame_position.cpp
test/: CMakeLists.txt
test/src/: main.cpp
